added a list of the ingredients and also a orderlist of the steps to do

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,8 +8,57 @@
 <body>
     <h1>Lasagna</h1>
 <img src="../images/lasagna.jpg" alt="Image of a Lasagna" height="800" width="800">
+<git commit
 <h2>Description</h2>
 <strong><p>A Lasagna wich is worth the efort<br>24h Lasagna</p></strong>
+
+<h3>The Meatsauce</h3>
+<ul>
+<li>3 carrots</li>
+<li>3 celery sticks</li>
+<li>2 onions</li>
+<li>1kg ground meat</li>
+<li>1 glas dried tomatos</li>
+<li>1.5l beef stock</li>
+<li>1.5l tomato sauce</li>
+<li>2tb tomato paste</li>
+<li>1 Glas of red wine</li>
+</ul>
+<h3>The Bechamelsauce</h3>
+<ul>
+   <li>100g Butter</li> 
+   <li>100g flour</li> 
+   <li>1.5l Milk</li> 
+<li>100g of Parmesan</li>
+<li>Pepper</li> 
+   <li>nutmag</li> 
+   <li>Salt</li> 
+</ul>
+<h2>Steps</h2>
+<h3>The Meatsauce</h3>
+<ol>
+    <li>cut your vegetables in 0.5cm thick cubs</li>
+    <li>cock ur ground meat in a metal cooking pot untill it gets brow so it gets some flavor</li>
+    <li>put the Meat aside and cock now ur vegetables in the cooking pot</li>
+    <li>add some oliveoil and butter</li>
+    <li>also add the dried Tomatos which you cut also in small pices also add the oil of them for flavor</li>
+    <li>after a few minutes add the tomato paste and let it cook another few minutes</li>
+    <li>Now add the meat back in</li>
+    <li>now add the beef stock (if you can add only 500ml off it and let the water cook away do that 3 times) </li>
+    <li>After that add the glas of wine and let it reduce</li>
+    <li>After it has reduced add the tomato sauce</li>
+    <li>Let it cook atleast 6h the longer the better</li>
+</ol>
+
+<h3>The Bechamelsauce</h3>
+<ol>
+<li>Add the Butter in to the cooking pot and let it brown(browning Butter adds a nuty flavor to your sauce)></li>
+<li>After your butter is lightly brown add your flour and let it cook for 1 or 2 Minutes so the flour tast disappears</li>
+<li>Now add little by little some Milk so it doesn`t get clupy</li>
+<li>After you poured all the milk in add your parmesan add let it cook for a few minutes</li>
+<li>Now add your spices (pepper, nutmag and salt)</li>
+</ol>
+
 
 </body>
 </html>
