Pushingall files to git

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -58,7 +58,14 @@
 <li>After you poured all the milk in add your parmesan add let it cook for a few minutes</li>
 <li>Now add your spices (pepper, nutmag and salt)</li>
 </ol>
-
+<h3>Last Steps</h3>
+<ol>
+    <li>Now you have to Build the Lasagna add the meat sauce first on the bottom then add your lasagna plates 
+        after that repeat meatsauce Bechamelsauce and lasanga plates until your on the last layer of there you only add Bechamelsauce and chees</li>
+    <li>then put it in the Oven by 180°C</li>
+    <li>let cook until the top is nicely browned</li>
+    <li>let it cool for about 20min and then its ready to eat</li>
+</ol>
 
 </body>
 </html>
